tests/ui/traits/unconstrained-projection-normalization-2.next.stderr
error[E0207]: the type parameter `T` is not constrained by the impl trait, self type, or predicates
  --> $DIR/unconstrained-projection-normalization-2.rs:14:6
   |
LL | impl<T: ?Sized> Every for Thing {
   |      ^ unconstrained type parameter

error[E0282]: type annotations needed
  --> $DIR/unconstrained-projection-normalization-2.rs:19:11
   |
LL | fn foo(_: <Thing as Every>::Assoc) {}
   |           ^^^^^^^^^^^^^^^^^^^^^^^ cannot infer type for associated type `<Thing as Every>::Assoc`

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0207, E0282.
For more information about an error, try `rustc --explain E0207`.
